@@ -491,110 +491,111 @@ For more, see Entries-24
  newbie3                   news                      nexits()                 
  next()                    nextdbref()               nlsearch()               
  nmwho()                   no_command                no_leave                 
- no_tel                    no_warn                   noaccents                
- noleave                   non-standard attributes   noname                   
- nor()                     nospace                   nospoof                  
- not()                     nowarn                    nplayers()               
- nsearch()                 nsemit()                  nslemit()                
- nsoemit()                 nspemit()                 nsprompt()               
- nsremit()                 nszemit()                 nthings()                
- null()                    num()                     numversion()             
- nvcon()                   nvexits()                 nvplayers()              
+ no_log                    no_tel                    no_warn                  
+ noaccents                 noleave                   non-standard attributes  
+ noname                    nor()                     nospace                  
+ nospoof                   not()                     nowarn                   
+ nplayers()                nsearch()                 nsemit()                 
+ nslemit()                 nsoemit()                 nspemit()                
+ nsprompt()                nsremit()                 nszemit()                
+ nthings()                 null()                    num()                    
+ numversion()              nvcon()                   nvexits()                
 
 For more, see Entries-25
 -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
 & Entries-25
 -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
- nvthings()                nwho()                    obj()                    
- object parents            objeval()                 objid()                  
- objmem()                  oemit()                   on-vacation              
- opaque                    open()                    or()                     
- ord()                     ordinal()                 orflags()                
- orlflags()                orlpowers()               orphan                   
- outputprefix              outputsuffix              owner()                  
- page                      page2                     paranoid                 
- parent                    parent()                  parents                  
- parents2                  parents3                  parents4                 
- parents5                  parse()                   patchlevels              
- pcreate()                 pemit()                   pfun()                   
- pfun2                     pfun3                     pi()                     
- pickrand()                pidinfo()                 player                   
- player()                  playermem()               pmatch()                 
- poll()                    ports()                   pos()                    
+ nvplayers()               nvthings()                nwho()                   
+ obj()                     object parents            objeval()                
+ objid()                   objmem()                  oemit()                  
+ on-vacation               opaque                    open()                   
+ or()                      ord()                     ordinal()                
+ orflags()                 orlflags()                orlpowers()              
+ orphan                    outputprefix              outputsuffix             
+ owner()                   page                      page2                    
+ paranoid                  parent                    parent()                 
+ parents                   parents2                  parents3                 
+ parents4                  parents5                  parse()                  
+ patchlevels               pcreate()                 pemit()                  
+ pfun()                    pfun2                     pfun3                    
+ pi()                      pickrand()                pidinfo()                
+ player                    player()                  playermem()              
+ pmatch()                  poll()                    ports()                  
 
 For more, see Entries-26
 -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
 & Entries-26
 -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
- pose                      pose2                     poss()                   
- power()                   powers list               powers list2             
- powers()                  powers2                   prompt()                 
- prompt_newlines           pueblo                    pueblo features          
- pueblo()                  puppet                    puppets                  
- puppets2                  queue                     quiet                    
- quit                      quota()                   r()                      
- r-function                rand()                    randword()               
- read                      recv()                    regedit()                
- regeditall()              regeditalli()             regediti()               
- regexp                    regexp classes            regexp classes2          
- regexp examples           regexp syntax             regexp syntax2           
- regexp syntax3            regexp syntax4            regexp syntax5           
- regexp syntax6            regexp syntax7            regexp syntax8           
- regexps                   regexps2                  registers                
- registers2                regmatch()                regmatchi()              
+ pos()                     pose                      pose2                    
+ poss()                    power()                   powers list              
+ powers list2              powers()                  powers2                  
+ prompt()                  prompt_newlines           pueblo                   
+ pueblo features           pueblo()                  puppet                   
+ puppets                   puppets2                  queue                    
+ quiet                     quit                      quota()                  
+ r()                       r-function                rand()                   
+ randword()                read                      recv()                   
+ regedit()                 regeditall()              regeditalli()            
+ regediti()                regexp                    regexp classes           
+ regexp classes2           regexp examples           regexp syntax            
+ regexp syntax2            regexp syntax3            regexp syntax4           
+ regexp syntax5            regexp syntax6            regexp syntax7           
+ regexp syntax8            regexps                   regexps2                 
+ registers                 registers2                regmatch()               
 
 For more, see Entries-27
 -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
 & Entries-27
 -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
- regrab()                  regraball()               regraballi()             
- regrabi()                 regrep()                  regrepi()                
- regular expression functions                        remainder()              
- remit()                   remove()                  repeat()                 
- replace()                 rest()                    restarts()               
- restarttime()             restrict                  restrict2                
- restrict3                 reswitch()                reswitchall()            
- reswitchalli()            reswitchi()               reverse()                
- revwords()                right()                   rjust()                  
- rloc()                    rnum()                    room                     
- room()                    root()                    round()                  
- royalty                   rquota                    rules                    
- runout2                   s()                       s-function               
- safe                      say                       scan()                   
- score                     scramble()                screenheight             
- screenwidth               search()                  search2                  
+ regmatchi()               regrab()                  regraball()              
+ regraballi()              regrabi()                 regrep()                 
+ regrepi()                 regular expression functions                       
+ remainder()               remit()                   remove()                 
+ repeat()                  replace()                 rest()                   
+ restarts()                restarttime()             restrict                 
+ restrict2                 restrict3                 reswitch()               
+ reswitchall()             reswitchalli()            reswitchi()              
+ reverse()                 revwords()                right()                  
+ rjust()                   rloc()                    rnum()                   
+ room                      room()                    root()                   
+ round()                   royalty                   rquota                   
+ rules                     runout2                   s()                      
+ s-function                safe                      say                      
+ scan()                    score                     scramble()               
+ screenheight              screenwidth               search()                 
 
 For more, see Entries-28
 -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
 & Entries-28
 -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
- secs()                    secure()                  semaphores               
- semaphores2               semaphores3               semaphores4              
- semaphores5               semaphores6               semipose                 
- sent()                    session                   set()                    
- setdiff()                 setinter()                setq()                   
- setq2                     setq3                     setr()                   
- setting-attributes        setunion()                sex                      
- sha0()                    shared                    shared players           
- shared players2           shl()                     shr()                    
- shuffle()                 sign()                    sin()                    
- slay                      socket commands           softcode                 
- sort()                    sortby()                  sorting                  
- sortkey()                 soundex()                 soundex2                 
- soundlike()               soundslike()              space()                  
- speak()                   speak2                    speak3                   
- speak4                    speak5                    speak6                   
+ search2                   secs()                    secure()                 
+ semaphores                semaphores2               semaphores3              
+ semaphores4               semaphores5               semaphores6              
+ semipose                  sent()                    session                  
+ set()                     setdiff()                 setinter()               
+ setq()                    setq2                     setq3                    
+ setr()                    setting-attributes        setunion()               
+ sex                       sha0()                    shared                   
+ shared players            shared players2           shl()                    
+ shr()                     shuffle()                 sign()                   
+ sin()                     slay                      socket commands          
+ softcode                  sort()                    sortby()                 
+ sorting                   sortkey()                 soundex()                
+ soundex2                  soundlike()               soundslike()             
+ space()                   speak()                   speak2                   
+ speak3                    speak4                    speak5                   
 
 For more, see Entries-29
 -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
 & Entries-29
 -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
- speak7                    speakpenn()               spellnum()               
- splice()                  spoofing                  sql functions            
- sql()                     sqlescape()               sqrt()                   
- squish()                  ssl()                     stack                    
- starttime()               stats()                   stddev()                 
- step()                    sticky                    strcat()                 
+ speak6                    speak7                    speakpenn()              
+ spellnum()                splice()                  spoofing                 
+ sql functions             sql()                     sqlescape()              
+ sqrt()                    squish()                  ssl()                    
+ stack                     starttime()               stats()                  
+ stddev()                  step()                    sticky                   
+ strallof()                strcat()                  strfirstof()             
  string functions          strings                   stringsecs()             
  strinsert()               stripaccents()            stripansi()              
  strlen()                  strmatch()                strreplace()             
@@ -604,12 +605,12 @@ For more, see Entries-29
  switch()                  switch2                   switchall()              
  switches                  t()                       table()                  
  tag()                     tagwrap()                 take                     
- tan()                     teach                     tel()                    
 
 For more, see Entries-30
 -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
 & Entries-30
 -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
+ tan()                     teach                     tel()                    
  tel_ok                    terminfo()                terse                    
  testlock()                textentries()             textfile()               
  think                     time functions            time()                   
@@ -625,12 +626,12 @@ For more, see Entries-30
  ulambda()                 uldefault()               ulocal()                 
  ulocal2                   unfindable                unfollow                 
  uninspected               unique()                  unregistered             
- unsetq()                  use                       user-defined commands    
 
 For more, see Entries-31
 -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
 & Entries-31
 -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
+ unsetq()                  use                       user-defined commands    
  user-defined2             utctime()                 utility functions        
  v()                       v-function                vadd()                   
  val()                     valid()                   vcross()                 
@@ -646,12 +647,12 @@ For more, see Entries-31
  wipe()                    with                      wizard                   
  wordpos()                 words()                   wrap()                   
  xattr()                   xattrp()                  xcon()                   
- xexits()                  xget                      xmwho()                  
 
 For more, see Entries-32
 -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
 & Entries-32
 -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
+ xexits()                  xget                      xmwho()                  
  xmwhoid()                 xor()                     xplayers()               
  xthings()                 xvcon()                   xvexits()                
  xvplayers()               xvthings()                xwho()                   
